# fastapi_toolkit

./: .gitignore  1.py  README.md  config.yaml  fastapi_toolkit.yaml  pyproject.toml
compute_field_test/: env  pyproject.toml
compute_field_test/app/: __init__.py
compute_field_test/inner_code/: config.py  custom_types.py  db.py  models.py  schemas.py  setting.py
compute_field_test/inner_code/auth/: __init__.py  routes.py
compute_field_test/inner_code/crud/: __init__.py  item_crud.py  range_crud.py  user_crud.py
compute_field_test/inner_code/dev/: __init__.py  db.py
compute_field_test/inner_code/repo/: __init__.py  item_repo.py  range_repo.py  user_repo.py
compute_field_test/inner_code/routers/: __init__.py  item_router.py  range_router.py  user_router.py
compute_field_test/metadata/: models.py
fastapi_demo/: database.db  env  gen.py  pyproject.toml  t.py
fastapi_demo/app/: __init__.py  config.py  db.py  models.py  setting.py
fastapi_demo/app/auth/: __init__.py  routes.py
fastapi_demo/app/dev/: __init__.py  db.py
fastapi_demo/app/repo/: __init__.py  certified_record_repo.py  info_block_repo.py  user_repo.py
fastapi_demo/app/router/: __init__.py  certified_record_router.py  info_block_router.py  user_router.py
fastapi_demo/inner_code/: config.py  custom_types.py  db.py  models.py  schemas.py  setting.py
fastapi_demo/inner_code/api/: UserController.py
fastapi_demo/inner_code/auth/: __init__.py  routes.py
fastapi_demo/inner_code/crud/: __init__.py  certified_record_crud.py  comment_crud.py  (+7 more)
fastapi_demo/metadata/: apis.py  gen.py  models.py
(+114 files in other folders)
