[tool.poetry]
name = "compute-field-test"
version = "0.1.0"
description = ""
authors = ["shawn <shawnsiu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi-toolkit-shawn587 = {path = ".."}
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
