[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["shawn <shawnsiu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiomysql = "^0.2.0"
fastapi-toolkit-shawn587 = {path = "../fastapi_toolkit"}
greenlet = "^3.0.3"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
