[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["0x587 <shawnsiu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi-toolkit-shawn587 = {path = ".."}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
